# ducky-jam

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dependency-reduced-pom.xml  imgui.ini  pom.xml
.config/: display.conf
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  refactor.md
data/beatmaps/1831596/: 1831596.osu
include/application/: Application.hpp
include/component/: Component.hpp
include/configuration/: Configuration.hpp
include/configuration/display/: DisplayConfiguration.hpp
include/engine/mesh/: Instance.hpp  Mesh.hpp
include/engine/scene/: Scene.hpp
include/engine/shader/: Shader.hpp
include/engine/shape/: Shape.hpp
include/engine/shape/rectangle/: Rectangle.hpp
include/engine/sound/: Sound.hpp  SoundBuffer.hpp  SoundPlayer.hpp  SoundSource.hpp
include/logger/: Entry.hpp  Logger.hpp  LoggerMacros.hpp  Severity.hpp
include/manager/: SceneManager.hpp
include/parser/: Parser.hpp
include/parser/beatmap/: BeatmapParser.hpp  HitObject.hpp  TimingPoint.hpp
include/utility/bit/: BitUtility.hpp
include/utility/colour/: ColourUtility.hpp
include/utility/datatype/: ConvertUtility.hpp
include/utility/datetime/: DatetimeUtility.hpp
include/utility/file/: FileUtility.hpp
include/utility/string/: StringUtility.hpp
scripts/: install.sh  package.sh  run.sh
src/: main.cpp
src/application/: Application.cpp
src/component/: Component.cpp
src/configuration/: Configuration.cpp
src/configuration/display/: DisplayConfiguration.cpp
src/engine/mesh/: Mesh.cpp
src/engine/scene/: Scene.cpp
src/engine/shader/: Shader.cpp
src/engine/shape/: Shape.cpp
src/engine/sound/: Sound.cpp  SoundBuffer.cpp  SoundPlayer.cpp  SoundSource.cpp
src/logger/: Entry.cpp  Logger.cpp
src/main/java/: Main.java
src/manager/: SceneManager.cpp
src/parser/: Parser.cpp
src/parser/beatmap/: BeatmapParser.cpp  HitObject.cpp  TimingPoint.cpp
src/utility/bit/: BitUtility.cpp
src/utility/colour/: ColourUtility.cpp
src/utility/datatype/: ConvertUtility.cpp
src/utility/datetime/: DatetimeUtility.cpp
src/utility/file/: FileUtility.cpp
src/utility/string/: StringUtility.cpp
(+12 files in other folders)
